Rocketseat Explorer Projeto 07 SPA

--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
     <a href="/404" onclick="route()">404</a>
   </nav>
   <div id="app"></div>
-  <script>
-    function route(event) {
-      event = event || window.event
-      event.preventDefault()
-    }
-  </script>
+  <script src="js/index.js" type="module"></script>
 </body>
 </html>
